Total Count and Percentage

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -756,16 +756,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 637,
    "metadata": {},
    "outputs": [],
    "source": [
-    "grouped_info = info_copy.groupby(['Age Ranges'])"
+    "grouped_agerange = info_copy.groupby(['Age Ranges'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 638,
    "metadata": {},
    "outputs": [
     {
@@ -866,13 +866,81 @@
        "40+                12   12      12"
       ]
      },
-     "execution_count": 634,
+     "execution_count": 638,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "grouped_info.count()"
+    "grouped_agerange.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 639,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age Ranges\n",
+       "<10       17\n",
+       "10-14     22\n",
+       "15-19    107\n",
+       "20-24    258\n",
+       "25-29     77\n",
+       "30-34     52\n",
+       "35-39     31\n",
+       "40+       12\n",
+       "Name: User Name, dtype: int64"
+      ]
+     },
+     "execution_count": 639,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_perage = grouped_agerange[\"User Name\"].count()\n",
+    "count_perage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 642,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "age_percentage = grouped_agerange[\"User Name\"].count() / players_infodf[\"User Name\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 643,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Age Ranges\n",
+       "<10      0.029514\n",
+       "10-14    0.038194\n",
+       "15-19    0.185764\n",
+       "20-24    0.447917\n",
+       "25-29    0.133681\n",
+       "30-34    0.090278\n",
+       "35-39    0.053819\n",
+       "40+      0.020833\n",
+       "Name: User Name, dtype: float64"
+      ]
+     },
+     "execution_count": 643,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_percentage"
    ]
   },
   {
@@ -968,6 +1036,110 @@
     }
    ],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 645,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Count</th>\n",
+       "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Ranges</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>&lt;10</th>\n",
+       "      <td>17</td>\n",
+       "      <td>0.029514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10-14</th>\n",
+       "      <td>22</td>\n",
+       "      <td>0.038194</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15-19</th>\n",
+       "      <td>107</td>\n",
+       "      <td>0.185764</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20-24</th>\n",
+       "      <td>258</td>\n",
+       "      <td>0.447917</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25-29</th>\n",
+       "      <td>77</td>\n",
+       "      <td>0.133681</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30-34</th>\n",
+       "      <td>52</td>\n",
+       "      <td>0.090278</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35-39</th>\n",
+       "      <td>31</td>\n",
+       "      <td>0.053819</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40+</th>\n",
+       "      <td>12</td>\n",
+       "      <td>0.020833</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Total Count  Percentage of Players\n",
+       "Age Ranges                                    \n",
+       "<10                  17               0.029514\n",
+       "10-14                22               0.038194\n",
+       "15-19               107               0.185764\n",
+       "20-24               258               0.447917\n",
+       "25-29                77               0.133681\n",
+       "30-34                52               0.090278\n",
+       "35-39                31               0.053819\n",
+       "40+                  12               0.020833"
+      ]
+     },
+     "execution_count": 645,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "age_demographics = pd.DataFrame({\"Total Count\": count_perage,\n",
+    "                                \"Percentage of Players\":age_percentage})\n",
+    "age_demographics"
+   ]
   },
   {
    "cell_type": "code",
