Age demographics completed

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 651,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,322 +630,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 652,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Creating a copy of the original data to work with\n",
+    "# Creating a copy of the original of data to work with\n",
     "info_copy = players_infodf.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "User Name    object\n",
-       "Age           int64\n",
-       "Gender       object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 630,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info_copy.dtypes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 631,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>User Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       User Name  Age Gender\n",
-       "0        Lisim78   20   Male\n",
-       "1    Lisovynya38   40   Male\n",
-       "2     Ithergue48   24   Male\n",
-       "3  Chamassasya86   24   Male\n",
-       "4      Iskosia90   23   Male"
-      ]
-     },
-     "execution_count": 631,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info_copy.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Adding the new column based on the bins\n",
     "info_copy[\"Age Ranges\"] = pd.cut(info_copy[\"Age\"], bins, labels=age_groups)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Grouping the data by Age Range\n",
     "grouped_agerange = info_copy.groupby(['Age Ranges'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>User Name</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
-       "      <td>17</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>22</td>\n",
-       "      <td>22</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>107</td>\n",
-       "      <td>107</td>\n",
-       "      <td>107</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>258</td>\n",
-       "      <td>258</td>\n",
-       "      <td>258</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>77</td>\n",
-       "      <td>77</td>\n",
-       "      <td>77</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>52</td>\n",
-       "      <td>52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "      <td>31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "      <td>12</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            User Name  Age  Gender\n",
-       "Age Ranges                        \n",
-       "<10                17   17      17\n",
-       "10-14              22   22      22\n",
-       "15-19             107  107     107\n",
-       "20-24             258  258     258\n",
-       "25-29              77   77      77\n",
-       "30-34              52   52      52\n",
-       "35-39              31   31      31\n",
-       "40+                12   12      12"
-      ]
-     },
-     "execution_count": 638,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "grouped_agerange.count()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 639,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Age Ranges\n",
-       "<10       17\n",
-       "10-14     22\n",
-       "15-19    107\n",
-       "20-24    258\n",
-       "25-29     77\n",
-       "30-34     52\n",
-       "35-39     31\n",
-       "40+       12\n",
-       "Name: User Name, dtype: int64"
-      ]
-     },
-     "execution_count": 639,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count_perage = grouped_agerange[\"User Name\"].count()\n",
-    "count_perage"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 662,
    "metadata": {},
    "outputs": [],
    "source": [
-    "age_percentage = grouped_agerange[\"User Name\"].count() / players_infodf[\"User Name\"].count()"
+    "# Total Count of users by age\n",
+    "count_perage = grouped_agerange[\"User Name\"].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 659,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Age Ranges\n",
-       "<10      0.029514\n",
-       "10-14    0.038194\n",
-       "15-19    0.185764\n",
-       "20-24    0.447917\n",
-       "25-29    0.133681\n",
-       "30-34    0.090278\n",
-       "35-39    0.053819\n",
-       "40+      0.020833\n",
-       "Name: User Name, dtype: float64"
-      ]
-     },
-     "execution_count": 643,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "age_percentage"
+    "# Percentage of Players based on age\n",
+    "age_percentage = (grouped_agerange[\"User Name\"].count() / players_infodf[\"User Name\"].count())*100"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 663,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a data frame to store the summary\n",
+    "age_demographics = pd.DataFrame({\"Total Count\": count_perage,\n",
+    "                                \"Percentage of Players\":age_percentage})\n",
+    "# Formatting the percentage values\n",
+    "age_demographics[\"Percentage of Players\"] = age_demographics[\"Percentage of Players\"].map((\"{:.2f}%\").format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 664,
    "metadata": {},
    "outputs": [
     {
@@ -971,6 +719,11 @@
        "      <th></th>\n",
        "      <th>Total Count</th>\n",
        "      <th>Percentage of Players</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Age Ranges</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1019,134 +772,27 @@
        "</div>"
       ],
       "text/plain": [
-       "       Total Count Percentage of Players\n",
-       "<10             17                 2.95%\n",
-       "10-14           22                 3.82%\n",
-       "15-19          107                18.58%\n",
-       "20-24          258                44.79%\n",
-       "25-29           77                13.37%\n",
-       "30-34           52                 9.03%\n",
-       "35-39           31                 5.38%\n",
-       "40+             12                 2.08%"
+       "            Total Count Percentage of Players\n",
+       "Age Ranges                                   \n",
+       "<10                  17                 2.95%\n",
+       "10-14                22                 3.82%\n",
+       "15-19               107                18.58%\n",
+       "20-24               258                44.79%\n",
+       "25-29                77                13.37%\n",
+       "30-34                52                 9.03%\n",
+       "35-39                31                 5.38%\n",
+       "40+                  12                 2.08%"
       ]
      },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 645,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Total Count</th>\n",
-       "      <th>Percentage of Players</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>17</td>\n",
-       "      <td>0.029514</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>22</td>\n",
-       "      <td>0.038194</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>107</td>\n",
-       "      <td>0.185764</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>258</td>\n",
-       "      <td>0.447917</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>77</td>\n",
-       "      <td>0.133681</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>52</td>\n",
-       "      <td>0.090278</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>31</td>\n",
-       "      <td>0.053819</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>12</td>\n",
-       "      <td>0.020833</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            Total Count  Percentage of Players\n",
-       "Age Ranges                                    \n",
-       "<10                  17               0.029514\n",
-       "10-14                22               0.038194\n",
-       "15-19               107               0.185764\n",
-       "20-24               258               0.447917\n",
-       "25-29                77               0.133681\n",
-       "30-34                52               0.090278\n",
-       "35-39                31               0.053819\n",
-       "40+                  12               0.020833"
-      ]
-     },
-     "execution_count": 645,
+     "execution_count": 664,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "age_demographics = pd.DataFrame({\"Total Count\": count_perage,\n",
-    "                                \"Percentage of Players\":age_percentage})\n",
+    "# Display the data frame\n",
     "age_demographics"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
