Top Spenders Completed

--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -892,7 +892,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 685,
+   "execution_count": 689,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a data frame to store the summary\n",
+    "purchasing_analysis_age = pd.DataFrame({\"Purchase Count\": purchase_countgpa,\n",
+    "                                       \"Average Purchase Price\": average_gpa,\n",
+    "                                       \"Total Purchase Value\": purchase_valuegpa,\n",
+    "                                       \"Avg Total Purchase per Person\": person_averagegpa})\n",
+    "# Change the format of the columns\n",
+    "purchasing_analysis_age[\"Average Purchase Price\"] = purchasing_analysis_age[\"Average Purchase Price\"].map((\"${:.2f}\").format)\n",
+    "purchasing_analysis_age[\"Total Purchase Value\"] = purchasing_analysis_age[\"Total Purchase Value\"].map((\"${:.2f}\").format)\n",
+    "purchasing_analysis_age[\"Avg Total Purchase per Person\"] = purchasing_analysis_age[\"Avg Total Purchase per Person\"].map((\"${:.2f}\").format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 690,
    "metadata": {},
    "outputs": [
     {
@@ -1014,161 +1031,15 @@
        "40+                                $3.19  "
       ]
      },
-     "execution_count": 685,
+     "execution_count": 690,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Create a data frame to store the summary\n",
-    "purchasing_analysis_age = pd.DataFrame({\"Purchase Count\": purchase_countgpa,\n",
-    "                                       \"Average Purchase Price\": average_gpa,\n",
-    "                                       \"Total Purchase Value\": purchase_valuegpa,\n",
-    "                                       \"Avg Total Purchase per Person\": person_averagegpa})\n",
-    "purchasing_analysis_age[\"Average Purchase Price\"] = purchasing_analysis_age[\"Average Purchase Price\"].map((\"${:.2f}\").format)\n",
-    "purchasing_analysis_age[\"Total Purchase Value\"] = purchasing_analysis_age[\"Total Purchase Value\"].map((\"${:.2f}\").format)\n",
-    "purchasing_analysis_age[\"Avg Total Purchase per Person\"] = purchasing_analysis_age[\"Avg Total Purchase per Person\"].map((\"${:.2f}\").format)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Display the data frame\n",
     "purchasing_analysis_age"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
-       "      <th>Total Purchase Value</th>\n",
-       "      <th>Avg Total Purchase per Person</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Age Ranges</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>&lt;10</th>\n",
-       "      <td>23</td>\n",
-       "      <td>$3.35</td>\n",
-       "      <td>$77.13</td>\n",
-       "      <td>$4.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10-14</th>\n",
-       "      <td>28</td>\n",
-       "      <td>$2.96</td>\n",
-       "      <td>$82.78</td>\n",
-       "      <td>$3.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15-19</th>\n",
-       "      <td>136</td>\n",
-       "      <td>$3.04</td>\n",
-       "      <td>$412.89</td>\n",
-       "      <td>$3.86</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20-24</th>\n",
-       "      <td>365</td>\n",
-       "      <td>$3.05</td>\n",
-       "      <td>$1,114.06</td>\n",
-       "      <td>$4.32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25-29</th>\n",
-       "      <td>101</td>\n",
-       "      <td>$2.90</td>\n",
-       "      <td>$293.00</td>\n",
-       "      <td>$3.81</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30-34</th>\n",
-       "      <td>73</td>\n",
-       "      <td>$2.93</td>\n",
-       "      <td>$214.00</td>\n",
-       "      <td>$4.12</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>35-39</th>\n",
-       "      <td>41</td>\n",
-       "      <td>$3.60</td>\n",
-       "      <td>$147.67</td>\n",
-       "      <td>$4.76</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40+</th>\n",
-       "      <td>13</td>\n",
-       "      <td>$2.94</td>\n",
-       "      <td>$38.24</td>\n",
-       "      <td>$3.19</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           Purchase Count Average Purchase Price Total Purchase Value  \\\n",
-       "Age Ranges                                                              \n",
-       "<10                    23                  $3.35               $77.13   \n",
-       "10-14                  28                  $2.96               $82.78   \n",
-       "15-19                 136                  $3.04              $412.89   \n",
-       "20-24                 365                  $3.05            $1,114.06   \n",
-       "25-29                 101                  $2.90              $293.00   \n",
-       "30-34                  73                  $2.93              $214.00   \n",
-       "35-39                  41                  $3.60              $147.67   \n",
-       "40+                    13                  $2.94               $38.24   \n",
-       "\n",
-       "           Avg Total Purchase per Person  \n",
-       "Age Ranges                                \n",
-       "<10                                $4.54  \n",
-       "10-14                              $3.76  \n",
-       "15-19                              $3.86  \n",
-       "20-24                              $4.32  \n",
-       "25-29                              $3.81  \n",
-       "30-34                              $4.12  \n",
-       "35-39                              $4.76  \n",
-       "40+                                $3.19  "
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1199,7 +1070,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 760,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Group the data base by User Name\n",
+    "grouped_username = purchase_data.groupby([\"SN\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 761,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Purchase Count\n",
+    "spenders_purchase = grouped_username[\"Purchase ID\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 762,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Average Purchase Price\n",
+    "average_purchasets = round(grouped_username[\"Price\"].mean(),2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 763,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Total Purchase Value\n",
+    "total_purchasets= grouped_username[\"Price\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 764,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a data frame to store the summary\n",
+    "top_spenders= pd.DataFrame({\"Purchase Count\": spenders_purchase,\n",
+    "                           \"Average Purhase Price\": average_purchasets,\n",
+    "                           \"Total Purchase Value\":total_purchasets})\n",
+    "\n",
+    "# Sort the data frame by Total purchase value\n",
+    "top_spenders = top_spenders.sort_values(\"Total Purchase Value\", ascending=False)\n",
+    "\n",
+    "# Format the columns\n",
+    "top_spenders[\"Average Purhase Price\"] = top_spenders[\"Average Purhase Price\"].map((\"${:.2f}\").format)\n",
+    "top_spenders[\"Total Purchase Value\"] = top_spenders[\"Total Purchase Value\"].map((\"${:.2f}\").format)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 765,
    "metadata": {},
    "outputs": [
     {
@@ -1224,7 +1154,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Purchase Count</th>\n",
-       "      <th>Average Purchase Price</th>\n",
+       "      <th>Average Purhase Price</th>\n",
        "      <th>Total Purchase Value</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1270,20 +1200,30 @@
        "</div>"
       ],
       "text/plain": [
-       "             Purchase Count Average Purchase Price Total Purchase Value\n",
-       "SN                                                                     \n",
-       "Lisosia93                 5                  $3.79               $18.96\n",
-       "Idastidru52               4                  $3.86               $15.45\n",
-       "Chamjask73                3                  $4.61               $13.83\n",
-       "Iral74                    4                  $3.40               $13.62\n",
-       "Iskadarya95               3                  $4.37               $13.10"
+       "             Purchase Count Average Purhase Price Total Purchase Value\n",
+       "SN                                                                    \n",
+       "Lisosia93                 5                 $3.79               $18.96\n",
+       "Idastidru52               4                 $3.86               $15.45\n",
+       "Chamjask73                3                 $4.61               $13.83\n",
+       "Iral74                    4                 $3.40               $13.62\n",
+       "Iskadarya95               3                 $4.37               $13.10"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 765,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "# Display the data frame\n",
+    "top_spenders.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
