--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -1258,6 +1258,281 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 766,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Purchase ID</th>\n",
+       "      <th>SN</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>Lisim78</td>\n",
+       "      <td>20</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>108</td>\n",
+       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
+       "      <td>3.53</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Lisovynya38</td>\n",
+       "      <td>40</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>143</td>\n",
+       "      <td>Frenzied Scimitar</td>\n",
+       "      <td>1.56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Ithergue48</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>92</td>\n",
+       "      <td>Final Critic</td>\n",
+       "      <td>4.88</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Chamassasya86</td>\n",
+       "      <td>24</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>100</td>\n",
+       "      <td>Blindscythe</td>\n",
+       "      <td>3.27</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Iskosia90</td>\n",
+       "      <td>23</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>131</td>\n",
+       "      <td>Fury</td>\n",
+       "      <td>1.44</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
+       "0            0        Lisim78   20   Male      108   \n",
+       "1            1    Lisovynya38   40   Male      143   \n",
+       "2            2     Ithergue48   24   Male       92   \n",
+       "3            3  Chamassasya86   24   Male      100   \n",
+       "4            4      Iskosia90   23   Male      131   \n",
+       "\n",
+       "                                   Item Name  Price  \n",
+       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
+       "1                          Frenzied Scimitar   1.56  \n",
+       "2                               Final Critic   4.88  \n",
+       "3                                Blindscythe   3.27  \n",
+       "4                                       Fury   1.44  "
+      ]
+     },
+     "execution_count": 766,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "purchase_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 786,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "grouped_items = purchase_data.groupby([\"Item ID\", \"Item Name\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 780,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_countmpi= grouped_items[\"Purchase ID\"].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 781,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_price= grouped_items[\"Price\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 782,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item_purchase = grouped_items[\"Price\"].sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 793,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Purchase Count</th>\n",
+       "      <th>Item Price</th>\n",
+       "      <th>Total Purchase Value</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item ID</th>\n",
+       "      <th>Item Name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>92</th>\n",
+       "      <th>Final Critic</th>\n",
+       "      <td>13</td>\n",
+       "      <td>$4.61</td>\n",
+       "      <td>59.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <th>Oathbreaker, Last Hope of the Breaking Storm</th>\n",
+       "      <td>12</td>\n",
+       "      <td>$4.23</td>\n",
+       "      <td>50.76</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>145</th>\n",
+       "      <th>Fiery Glass Crusader</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$4.58</td>\n",
+       "      <td>41.22</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <th>Persuasion</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.22</td>\n",
+       "      <td>28.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>108</th>\n",
+       "      <th>Extraction, Quickblade Of Trembling Hands</th>\n",
+       "      <td>9</td>\n",
+       "      <td>$3.53</td>\n",
+       "      <td>31.77</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                      Purchase Count  \\\n",
+       "Item ID Item Name                                                      \n",
+       "92      Final Critic                                              13   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm              12   \n",
+       "145     Fiery Glass Crusader                                       9   \n",
+       "132     Persuasion                                                 9   \n",
+       "108     Extraction, Quickblade Of Trembling Hands                  9   \n",
+       "\n",
+       "                                                     Item Price  \\\n",
+       "Item ID Item Name                                                 \n",
+       "92      Final Critic                                      $4.61   \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm      $4.23   \n",
+       "145     Fiery Glass Crusader                              $4.58   \n",
+       "132     Persuasion                                        $3.22   \n",
+       "108     Extraction, Quickblade Of Trembling Hands         $3.53   \n",
+       "\n",
+       "                                                      Total Purchase Value  \n",
+       "Item ID Item Name                                                           \n",
+       "92      Final Critic                                                 59.99  \n",
+       "178     Oathbreaker, Last Hope of the Breaking Storm                 50.76  \n",
+       "145     Fiery Glass Crusader                                         41.22  \n",
+       "132     Persuasion                                                   28.99  \n",
+       "108     Extraction, Quickblade Of Trembling Hands                    31.77  "
+      ]
+     },
+     "execution_count": 793,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_popular_items = pd.DataFrame({\"Purchase Count\":item_countmpi,\n",
+    "                                  \"Item Price\":item_price,\n",
+    "                                  \"Total Purchase Value\": item_purchase})\n",
+    "most_popular_items = most_popular_items.sort_values(\"Purchase Count\", ascending=False)\n",
+    "most_popular_items[\"Item Price\"] = most_popular_items[\"Item Price\"].map((\"${:.2f}\").format)\n",
+    "most_popular_items[\"Item Price\"] = most_popular_items[\"Item Price\"].map((\"${:.2f}\").format)\n",
+    "most_popular_items.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [
@@ -1366,6 +1641,13 @@
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
