--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 570,
+   "execution_count": 806,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 571,
+   "execution_count": 807,
    "metadata": {
     "scrolled": false
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 572,
+   "execution_count": 808,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 573,
+   "execution_count": 809,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
        "0            576"
       ]
      },
-     "execution_count": 573,
+     "execution_count": 809,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 575,
+   "execution_count": 810,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 576,
+   "execution_count": 811,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,17 +178,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 577,
+   "execution_count": 812,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of purchases\n",
+    "# Number of Purchases\n",
     "total_purchases = purchase_data[\"Purchase ID\"].count()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 813,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 549,
+   "execution_count": 814,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,28 +212,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 579,
+   "execution_count": 815,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_a2df7f76_ff9b_11ea_b437_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
-       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
-       "                        <td id=\"T_cef06ecc_ff4b_11ea_b92e_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
+       "                        <th id=\"T_a2df7f76_ff9b_11ea_b437_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_a2df7f76_ff9b_11ea_b437_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
+       "                        <td id=\"T_a2df7f76_ff9b_11ea_b437_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_a2df7f76_ff9b_11ea_b437_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
+       "                        <td id=\"T_a2df7f76_ff9b_11ea_b437_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fb303debc88>"
+       "<pandas.io.formats.style.Styler at 0x7fb2ff66cf28>"
       ]
      },
-     "execution_count": 579,
+     "execution_count": 815,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 816,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 582,
+   "execution_count": 817,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 583,
+   "execution_count": 818,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 584,
+   "execution_count": 819,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 585,
+   "execution_count": 820,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 586,
+   "execution_count": 821,
    "metadata": {},
    "outputs": [
     {
@@ -381,7 +381,7 @@
        "Other / Non-Disclosed           11                 1.91%"
       ]
      },
-     "execution_count": 586,
+     "execution_count": 821,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 588,
+   "execution_count": 822,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 589,
+   "execution_count": 823,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 590,
+   "execution_count": 824,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 591,
+   "execution_count": 825,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 592,
+   "execution_count": 826,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 593,
+   "execution_count": 827,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 594,
+   "execution_count": 828,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 829,
    "metadata": {
     "scrolled": true
    },
@@ -574,7 +574,7 @@
        "Other / Non-Disclosed               $50.19                             $4.56  "
       ]
      },
-     "execution_count": 595,
+     "execution_count": 829,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 651,
+   "execution_count": 830,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 652,
+   "execution_count": 831,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 655,
+   "execution_count": 832,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -650,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 656,
+   "execution_count": 833,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -660,7 +660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 662,
+   "execution_count": 834,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 659,
+   "execution_count": 835,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 663,
+   "execution_count": 836,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 837,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "40+                  12                 2.08%"
       ]
      },
-     "execution_count": 664,
+     "execution_count": 837,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 665,
+   "execution_count": 838,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 667,
+   "execution_count": 839,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -842,7 +842,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 669,
+   "execution_count": 840,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 674,
+   "execution_count": 841,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 686,
+   "execution_count": 842,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -872,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 687,
+   "execution_count": 843,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +882,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 688,
+   "execution_count": 844,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -892,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 689,
+   "execution_count": 845,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 690,
+   "execution_count": 846,
    "metadata": {},
    "outputs": [
     {
@@ -1031,7 +1031,7 @@
        "40+                                $3.19  "
       ]
      },
-     "execution_count": 690,
+     "execution_count": 846,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1070,7 +1070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 847,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 848,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 849,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 850,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1110,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 851,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1129,7 +1129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 852,
    "metadata": {},
    "outputs": [
     {
@@ -1209,7 +1209,7 @@
        "Iskadarya95               3                 $4.37               $13.10"
       ]
      },
-     "execution_count": 765,
+     "execution_count": 852,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 853,
    "metadata": {
     "scrolled": true
    },
@@ -1263,7 +1263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 854,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 781,
+   "execution_count": 855,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 856,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1293,7 +1293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 800,
+   "execution_count": 857,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 801,
+   "execution_count": 858,
    "metadata": {},
    "outputs": [
     {
@@ -1415,7 +1415,7 @@
        "108     Extraction, Quickblade Of Trembling Hands                  $31.77  "
       ]
      },
-     "execution_count": 801,
+     "execution_count": 858,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 805,
+   "execution_count": 859,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1462,7 +1462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 804,
+   "execution_count": 860,
    "metadata": {},
    "outputs": [
     {
@@ -1565,7 +1565,7 @@
        "103     Singed Scalpel                                             $34.80  "
       ]
      },
-     "execution_count": 804,
+     "execution_count": 860,
      "metadata": {},
      "output_type": "execute_result"
     }
