--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -326,18 +326,18 @@
      "data": {
       "text/html": [
        "<style  type=\"text/css\" >\n",
-       "</style><table id=\"T_1cee0c92_00e1_11eb_b121_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
+       "</style><table id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122\" ><thead>    <tr>        <th class=\"blank level0\" ></th>        <th class=\"col_heading level0 col0\" >Number of Unique Items</th>        <th class=\"col_heading level0 col1\" >Average Price</th>        <th class=\"col_heading level0 col2\" >Number of Purchases</th>        <th class=\"col_heading level0 col3\" >Total Revenue</th>    </tr></thead><tbody>\n",
        "                <tr>\n",
-       "                        <th id=\"T_1cee0c92_00e1_11eb_b121_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "                        <td id=\"T_1cee0c92_00e1_11eb_b121_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
-       "                        <td id=\"T_1cee0c92_00e1_11eb_b121_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
-       "                        <td id=\"T_1cee0c92_00e1_11eb_b121_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
-       "                        <td id=\"T_1cee0c92_00e1_11eb_b121_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
+       "                        <th id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col0\" class=\"data row0 col0\" >179</td>\n",
+       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col1\" class=\"data row0 col1\" >$3.05</td>\n",
+       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col2\" class=\"data row0 col2\" >780</td>\n",
+       "                        <td id=\"T_24e0c8c6_023b_11eb_90e4_acde48001122row0_col3\" class=\"data row0 col3\" >$2,379.77</td>\n",
        "            </tr>\n",
        "    </tbody></table>"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7feff8d19a90>"
+       "<pandas.io.formats.style.Styler at 0x7ffe5bc1db00>"
       ]
      },
      "execution_count": 10,
@@ -1722,9 +1722,9 @@
    "name": "python3"
   },
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData2] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-PythonData2-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
