--- a/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli_starter.ipynb
@@ -10,115 +10,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Purchase ID</th>\n",
-       "      <th>SN</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Gender</th>\n",
-       "      <th>Item ID</th>\n",
-       "      <th>Item Name</th>\n",
-       "      <th>Price</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Lisim78</td>\n",
-       "      <td>20</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>108</td>\n",
-       "      <td>Extraction, Quickblade Of Trembling Hands</td>\n",
-       "      <td>3.53</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Lisovynya38</td>\n",
-       "      <td>40</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>143</td>\n",
-       "      <td>Frenzied Scimitar</td>\n",
-       "      <td>1.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Ithergue48</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>92</td>\n",
-       "      <td>Final Critic</td>\n",
-       "      <td>4.88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Chamassasya86</td>\n",
-       "      <td>24</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>100</td>\n",
-       "      <td>Blindscythe</td>\n",
-       "      <td>3.27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Iskosia90</td>\n",
-       "      <td>23</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>131</td>\n",
-       "      <td>Fury</td>\n",
-       "      <td>1.44</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Purchase ID             SN  Age Gender  Item ID  \\\n",
-       "0            0        Lisim78   20   Male      108   \n",
-       "1            1    Lisovynya38   40   Male      143   \n",
-       "2            2     Ithergue48   24   Male       92   \n",
-       "3            3  Chamassasya86   24   Male      100   \n",
-       "4            4      Iskosia90   23   Male      131   \n",
-       "\n",
-       "                                   Item Name  Price  \n",
-       "0  Extraction, Quickblade Of Trembling Hands   3.53  \n",
-       "1                          Frenzied Scimitar   1.56  \n",
-       "2                               Final Critic   4.88  \n",
-       "3                                Blindscythe   3.27  \n",
-       "4                                       Fury   1.44  "
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Dependencies and Setup\n",
     "import pandas as pd\n",
@@ -127,8 +21,7 @@
     "file_to_load = \"Resources/purchase_data.csv\"\n",
     "\n",
     "# Read Purchasing File and store into Pandas data frame\n",
-    "purchase_data = pd.read_csv(file_to_load)\n",
-    "purchase_data.head()"
+    "purchase_data = pd.read_csv(file_to_load)"
    ]
   },
   {
@@ -582,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,13 +486,13 @@
     "                                 \"Total Purchase Value\": total_purchase,\n",
     "                                 \"Average Total Purchase Per Person\": average_person})\n",
     "gender_analysis[\"Average Purchase Price\"] = gender_analysis[\"Average Purchase Price\"].map((\"${:.2f}\").format)\n",
-    "gender_analysis[\"Total Purchase Value\"] = gender_analysis[\"Total Purchase Value\"].map((\"${:.2f}\").format)\n",
+    "gender_analysis[\"Total Purchase Value\"] = gender_analysis[\"Total Purchase Value\"].map((\"${0:,.2f}\").format)\n",
     "gender_analysis[\"Average Total Purchase Per Person\"] = gender_analysis[\"Average Total Purchase Per Person\"].map((\"${:.2f}\").format)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 67,
    "metadata": {
     "scrolled": true
    },
@@ -650,7 +543,7 @@
        "      <th>Male</th>\n",
        "      <td>652</td>\n",
        "      <td>$3.02</td>\n",
-       "      <td>$1967.64</td>\n",
+       "      <td>$1,967.64</td>\n",
        "      <td>$4.07</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -674,11 +567,11 @@
        "                      Total Purchase Value Average Total Purchase Per Person  \n",
        "Gender                                                                        \n",
        "Female                             $361.94                             $4.47  \n",
-       "Male                              $1967.64                             $4.07  \n",
+       "Male                             $1,967.64                             $4.07  \n",
        "Other / Non-Disclosed               $50.19                             $4.56  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1007,13 +900,13 @@
     "                                       \"Avg Total Purchase per Person\": person_averagegpa})\n",
     "# Change the format of the columns\n",
     "purchasing_analysis_age[\"Average Purchase Price\"] = purchasing_analysis_age[\"Average Purchase Price\"].map((\"${:.2f}\").format)\n",
-    "purchasing_analysis_age[\"Total Purchase Value\"] = purchasing_analysis_age[\"Total Purchase Value\"].map((\"${:.2f}\").format)\n",
+    "purchasing_analysis_age[\"Total Purchase Value\"] = purchasing_analysis_age[\"Total Purchase Value\"].map((\"${0:,.2f}\").format)\n",
     "purchasing_analysis_age[\"Avg Total Purchase per Person\"] = purchasing_analysis_age[\"Avg Total Purchase per Person\"].map((\"${:.2f}\").format)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +969,7 @@
        "      <th>20-24</th>\n",
        "      <td>365</td>\n",
        "      <td>$3.05</td>\n",
-       "      <td>$1114.06</td>\n",
+       "      <td>$1,114.06</td>\n",
        "      <td>$4.32</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1117,7 +1010,7 @@
        "<10                     23                  $3.35               $77.13   \n",
        "10-14                   28                  $2.96               $82.78   \n",
        "15-19                  136                  $3.04              $412.89   \n",
-       "20-24                  365                  $3.05             $1114.06   \n",
+       "20-24                  365                  $3.05            $1,114.06   \n",
        "25-29                  101                  $2.90              $293.00   \n",
        "30-34                   73                  $2.93              $214.00   \n",
        "35-39                   41                  $3.60              $147.67   \n",
@@ -1135,7 +1028,7 @@
        "40+                                $3.19  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
